Upgrade gradle and dependencies
This commit updates the Gradle version, Android Gradle Plugin version, Kotlin version, and several library dependencies. It also introduces a new WebViewActivity for displaying web content and makes related changes to layouts and the AndroidManifest.

Specific changes include:
- Upgraded Gradle to 8.5
- Upgraded Android Gradle Plugin to 8.1.2
- Upgraded Kotlin to 1.9.10
- Updated various support library versions
- Replaced jcenter() with mavenCentral()
- Added WebViewActivity and its layout
- Modified MainActivity to include a button to launch WebViewActivity
- Updated AndroidManifest to declare WebViewActivity and adjust PaymentActivity export status
- Updated .idea/gradle.xml to change testRunner and gradleJvm settings
- Modified gradlew and gradlew.bat scripts

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:background="#02042b"
     android:layout_height="match_parent"
+    android:weightSum="4"
     tools:context=".MainActivity">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_h_50"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.55" />
 
     <ImageView
         android:id="@+id/logo"
@@ -27,9 +23,8 @@
         android:id="@+id/btn_kotlin"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/logo"
-        app:layout_constraintBottom_toTopOf="@id/gl_h_50"
         android:layout_margin="20dp"
+        android:layout_weight="1"
         android:text="Click for Kotlin Mode"
         android:textAllCaps="false"
         android:background="@drawable/bg_button_lang"
@@ -40,8 +35,7 @@
         android:id="@+id/btn_java"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/gl_h_50"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_weight="1"
         android:layout_margin="20dp"
         android:text="Click for Java Mode"
         android:textAllCaps="false"
@@ -49,5 +43,17 @@
         android:elevation="20dp"
         />
 
+    <Button
+        android:id="@+id/btn_webview_activity"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_margin="20dp"
+        android:text="Open WebView Activity"
+        android:textAllCaps="false"
+        android:background="@drawable/bg_button_lang"
+        android:elevation="20dp"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
